--- a/detail.html
+++ b/detail.html
@@ -585,4 +585,8 @@
     <span>错误</span><span>信息</span>
  </div>
 </body>
+<!-- 先引入要用的js文件 -->
+<script src="./js/data.js"></script>
+<script src="./js/jquery.js"></script>
+<script src="./js/detail.js"></script>
 </html>
