添加商品到购物车，可以跳转

--- a/detail.html
+++ b/detail.html
@@ -589,4 +589,5 @@
 <script src="./js/data.js"></script>
 <script src="./js/jquery.js"></script>
 <script src="./js/detail.js"></script>
+<script src="./js/kits.js"></script>
 </html>
